# elodin

./: .clang-format  .cursorrules  .envrc  .gitattributes  .gitignore  .gitmodules  404.html  AGENTS.md  BIDIRECTIONAL_MIRROR_TEST.md  CHANGELOG.md  CNAME  Cargo.nix  Cargo.toml  DEPENDENCY_UPDATE_PLAN.md  EXTERNAL_DB_CONNECTION_FEATURE.md  FAQ.md  IMPLEMENTATION_SUMMARY.md  Justfile  LICENSE  MULTI_WINDOW_USAGE.md  README.md  REVIEW_FIXES.md  VIDEOS.md  default.nix  dist-workspace.toml  drone.kdl  fix_timestamps.md  flake.nix  index.html  justfile  log.info  motor-panel.kdl  multi-window-implementation-summary.md  nix-log.info  pyproject.toml  rate-control-panel.kdl  report.md  robots.txt  rocket.kdl  ruff.toml  (+7 more)
apps/dev-tools/: Cargo.toml  README.md
apps/dev-tools/src/: config.rs  main.rs
apps/dev-tools/wix/: main.wxs
apps/editor-web/: Cargo.toml  Justfile  README.md  flake.nix  index.html
apps/editor-web/src/: main.rs  web_sock.rs
apps/elodin/: Cargo.toml  README.md  build.rs  install-editor.sh
apps/elodin/src/: auth.rs  editor.rs  lib.rs  main.rs  monte_carlo.rs
apps/elodin/wix/: main.wxs
apps/inscriber/: Cargo.toml  README.md
apps/inscriber/src/: main.rs
docs/memserve/: Cargo.toml  README.md  memserve.rs
examples/drone/: .gitignore  README.md  config.py  control.py  drone_editor_plan.kdl  edu-450-v2-drone.glb  filter.py  main.py  main_osm_world.py  mekf.py  moi.py  motor-panel.kdl  motor_thrust_curve.csv  motors.py  params.py  pyproject.toml  rate-control-panel.kdl  sensors.py  sim.py  test_util.py  util.py
examples/drone/analysis/: estimate_indi_gains.py
examples/drone/assets/: talon-quad.glb
examples/msg-test/: Cargo.toml
examples/msg-test/src/: main.rs
fsw/aleph-setup/: Cargo.toml
fsw/aleph-setup/src/: iwd.rs  main.rs
fsw/aleph-status/: Cargo.toml
fsw/aleph-status/src/: logo.txt  main.rs
fsw/blackbox/: Cargo.toml
fsw/blackbox/src/: lib.rs  main.rs
fsw/file-bridge/: Cargo.toml
fsw/file-bridge/src/: main.rs
fsw/gstreamer/: Cargo.toml  README.md  build.rs
fsw/gstreamer/src/: lib.rs
fsw/lqr/: Cargo.toml
fsw/lqr/src/: main.rs
fsw/mekf/: Cargo.toml  README.md
fsw/mekf/src/: main.rs
fsw/msp-osd/: Cargo.toml  README.md  config.toml  test-local.sh
fsw/msp-osd/src/: config.rs  db_client.rs  layout.rs  main.rs  osd_grid.rs  telemetry.rs
fsw/multicopter/: Cargo.toml  README.md  rust-toolchain.toml
fsw/multicopter/.cargo/: config.toml
fsw/multicopter/src/: arena.rs  blackbox.rs  bmi270.rs  bmm350.rs  can.rs  command.rs  crsf.rs  dma.rs  dronecan.rs  dshot.rs  dwt.rs  i2c_dma.rs  led.rs  lib.rs  monotonic.rs  peripheral.rs  pin.rs  rtc.rs  sdmmc.rs  usb_serial.rs
fsw/multicopter/tests/: integration.rs
fsw/roci/: Cargo.toml  README.md
fsw/roci/adcs/: Cargo.toml
fsw/roci/examples/: msg-test.rs
fsw/roci/src/: combinators.rs  componentize.rs  csv.rs  lib.rs
fsw/rtsp-streamer/: Cargo.toml
fsw/rtsp-streamer/src/: main.rs
fsw/serial-bridge/: Cargo.toml  README.md
fsw/serial-bridge/src/: main.rs
fsw/tegrastats-bridge/: Cargo.toml  README.md
fsw/tegrastats-bridge/src/: main.rs
fsw/video-streamer/: Cargo.toml  README.md
fsw/video-streamer/src/: main.rs
libs/basilisk-rs/: .gitignore  Cargo.toml  README.md  build.rs  justfile
libs/basilisk-rs/examples/: mrp_pd.rs
libs/basilisk-rs/src/: att_control.rs  att_determination.rs  att_guidance.rs  basilisk.h  channel.rs  effector_interfaces.rs  lib.rs  log.rs  sys.rs
libs/bevy_ai_skybox/: Cargo.toml
libs/bevy_ai_skybox/src/: cubemap_convert.rs  lib.rs
libs/bevy_geo_frames/: Cargo.toml  README.md
libs/bevy_geo_frames/examples/: demo.rs
libs/bevy_geo_frames/src/: big_space.rs  geo.rs  lib.rs  prelude.rs
libs/bevy_world_mesh/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  NOTICE  README.md  flake.nix
libs/bevy_world_mesh/examples/: minimal.rs  planar.rs  preprocess_planar.rs  preprocess_spherical.rs  spherical.rs
libs/bevy_world_mesh/scripts/: phase_screenshot.sh  render_globe.sh  render_region.sh  run_examples.sh
libs/bevy_world_mesh/src/: fetch.rs  fetch_pipeline.rs  lib.rs  main.rs  prelude.rs  regions.rs
libs/conduit/: Cargo.toml
libs/conduit/src/: assets.rs  bevy.rs  bevy_sync.rs  client.rs  error.rs  lib.rs  nox.rs  polars.rs  query.rs  replay.rs  ser_de.rs  server.rs  system.rs  types.rs  world.rs
libs/cranelift-mlir/: ARCHITECTURE.md  Cargo.toml  PERFORMANCE.md  README.md
libs/cranelift-mlir/scripts/: catalog_ops.py  diff_profile.py  plot_tick_waveform.py
libs/cranelift-mlir/src/: const_cache.rs  const_fold.rs  debug.rs  inliner.rs  ir.rs  lib.rs  lower.rs  op_sampler.rs  parser.rs  profile.rs  slot_pool.rs  tensor_rt.rs  useinfo.rs
libs/cranelift-mlir/testdata/: ball.stablehlo.mlir  cube-sat.stablehlo.mlir  drone.stablehlo.mlir  linalg.stablehlo.mlir  rocket.stablehlo.mlir  three-body.stablehlo.mlir
libs/cranelift-mlir/tests/: checkpoint_test.rs  closed_call_test.mlir  cube_sat_e2e.rs  e2e.rs  external_mlir.rs  imported_data_arena.rs  large_constant_cache.rs  ops.rs  test_closed_call.rs  test_dynamic_ops_3body.rs  test_gather_3body.rs  test_sret_large.rs  test_threefry.rs  test_threefry_e2e.rs  test_uniform_pipeline.rs  test_while_dyn_slice.rs  three_body_e2e.rs
libs/db/: Cargo.toml  README.md  RUST_CLIENT_DESIGN.md  RUST_CLIENT_FINAL_SUMMARY.md  RUST_CLIENT_SUMMARY.md  build.rs  csv-convert.py  dist.toml  install-db.sh
libs/db/cli/: Cargo.toml
libs/db/cpp/: db.hpp  example.cpp  helpers.hpp  test.lua  vtable.hpp
libs/db/eql/: Cargo.toml  README.md  how-to.md
libs/db/examples/: Makefile  README.md  bridge-client.cpp  client-batched.cpp  client-per-component.cpp  client-write-only.cpp  client.c  client.cpp  db-config.lua  db.hpp  downlink.lua  log-client.cpp  rocket-client.cpp  sim-client.cpp  vtable-gen.rs
libs/db/macros/: Cargo.toml
libs/db/py/: Cargo.toml  README.md  elodin_db.pyi  example.py  pyproject.toml
libs/db/src/: append_log.rs  arrow.rs  asset_store.rs  assets.rs  assets_http.rs  axum.rs  cancellation.rs  coalescing_sink.rs  compact.rs  control.rs  drop.rs  error.rs  export.rs  export_mcap.rs  (+23 more)
(+7340 files in other folders)
