[workspace]
resolver = "2"
members = [
    "libs/elodin-editor",
    "libs/nox",
    "libs/nox-ecs",
    "libs/nox-ecs-macros",
    "libs/nox-py",
    "libs/nox-frames",
    "libs/noxla",
    "apps/elodin",
    "libs/basilisk-rs",
    "libs/roci",
    "libs/roci/macros",
    "libs/roci/adcs",
    "libs/wmm",
    "libs/s10",
    "libs/impeller2",
    "libs/impeller2/stellar",
    "libs/impeller2/bevy",
    "libs/impeller2/wkt",
    "libs/impeller2/bbq",
    "libs/impeller2/frame",
    "libs/db",
    "libs/db/cli",
    "libs/db/tests",
    "libs/stellarator",
    "libs/stellarator/buf",
    "libs/stellarator/macros",
    "libs/stellarator/maitake",
    "libs/stellarator/maitake/util",
    "libs/video-toolbox",
    "fsw/serial-bridge",
    "fsw/mekf",
    "fsw/lqr",
    "libs/postcard-c/codegen",
    "fsw/aleph-status",
    "fsw/tegrastats-bridge",
    "fsw/aleph-setup",
    "fsw/blackbox",
    "apps/inscriber",
    "fsw/video-streamer",
    "fsw/gstreamer"
]
exclude = ["fsw/sensor-fw", "fsw/blackbox", "docs/memserve"]

[workspace.package]
version = "0.14.1"
edition = "2024"
repository = "https://github.com/elodin-sys/elodin"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[profile.macos-release]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "debuginfo"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
# set workspace version as the version of xla
xla.package = "noxla"
xla.path = "libs/noxla"
roci-macros.path = "libs/roci/macros"
roci.path = "libs/roci"
roci.default-features = false
roci-adcs.path = "libs/roci/adcs"
nox.path = "libs/nox"
nox.default-features = false
nox-ecs.path = "libs/nox-ecs"
basilisk.path = "libs/basilisk-rs"
nox-frames.path = "libs/nox-frames"
wmm.path = "libs/wmm"

[profile.release-with-debug]
inherits = "release"
debug = true
