[workspace]
resolver = "2"
# This "default-members" is tempting to set because it would make `cargo run`
# run the `elodin` binary; however it also makes every other cargo command only
# apply to "apps/elodin"--meaning `cargo test` would only run the apps' tests
# and ignore the other tests unless `cargo test --workspace` was given as a
# command. So this comment is left here as a warning to not do that. Instead
# consider adding an alias to `.cargo/config.toml`.
#
# default-members = ["apps/elodin"]
members = [
    "libs/hamann-chen-line",
    "libs/elodin-editor",
    "libs/nox",
    "libs/elodin-macros",
    "libs/nox-py",
    "libs/nox-frames",
    "apps/elodin",
    "fsw/roci",
    "libs/db/macros",
    "fsw/roci/adcs",
    "libs/wmm",
    "libs/s10",
    "libs/impeller2",
    "libs/impeller2/stellar",
    "libs/impeller2/bevy",
    "libs/impeller2/wkt",
    "libs/impeller2/bbq",
    "libs/impeller2/frame",
    "libs/render-bridge",
    "libs/db",
    "libs/db/cli",
    "libs/db/tests",
    "libs/stellarator",
    "libs/stellarator/buf",
    "libs/stellarator/macros",
    "libs/stellarator/maitake",
    "libs/stellarator/maitake/util",
    "libs/video-toolbox",
    "fsw/serial-bridge",
    "fsw/mekf",
    "fsw/lqr",
    "libs/postcard-c/codegen",
    "fsw/aleph-status",
    "fsw/tegrastats-bridge",
    "fsw/aleph-setup",
    "fsw/blackbox",
    "apps/inscriber",
    "fsw/video-streamer",
    "fsw/gstreamer",
    "fsw/msp-osd",
    "fsw/udp_component_broadcast/impeller_py",
    "libs/db/eql",
    "libs/impeller2/kdl",
    "libs/db/examples/rust_client",
    "examples/rc-jet/controller",
    "libs/bevy_geo_frames",
    "libs/bevy_mat3_material",
    "libs/cranelift-mlir",
 ]
exclude = ["fsw/sensor-fw", "fsw/blackbox", "libs/muxide", "docs/memserve"]

[workspace.package]
version = "0.16.3-alpha.0"
edition = "2024"
repository = "https://github.com/elodin-sys/elodin"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[profile.macos-release]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "debuginfo"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
db-macros.path = "libs/db/macros"
roci.path = "fsw/roci"
roci.default-features = false
roci-adcs.path = "fsw/roci/adcs"
nox.path = "libs/nox"
nox.default-features = false
nox-frames.path = "libs/nox-frames"
wmm.path = "libs/wmm"

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.dependencies.bevy_editor_cam]
version = "0.7"

[workspace.dependencies.bevy]
version = "0.17"
default-features = false
features = [
  "std",
  "async_executor",
  "android-game-activity",
  "animation",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_post_process",
  "bevy_anti_alias",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_input_focus",
  "bevy_log",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_image",
  "bevy_mesh",
  "bevy_camera",
  "bevy_light",
  "bevy_shader",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_sprite_render",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "ktx2",
  "multi_threaded",
  "png",
  "reflect_auto_register",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "webgl2",
  "x11",
  "debug",
  "zstd_rust",
]

[workspace.dependencies.big_space]
version = "0.5"

[workspace.dependencies.muxide]
path = "libs/muxide"
version = "0.2"

[patch.crates-io]
map_3d = { git = "https://github.com/shanecelis/map_3d.git", branch = "feat/sphere" }
big_space = { git = "https://github.com/elodin-sys/big_space.git", branch = "no_prop_rot_v0.17" }
bevy_editor_cam = { git = "https://github.com/aevyrie/bevy_editor_cam", rev = "1ae39bda1aa8d547dec4b26747e466ad5b2ab9ab" }
