[workspace]
resolver = "2"
# This "default-members" is tempting to set because it would make `cargo run`
# run the `elodin` binary; however it also makes every other cargo command only
# apply to "apps/elodin"--meaning `cargo test` would only run the apps' tests
# and ignore the other tests unless `cargo test --workspace` was given as a
# command. So this comment is left here as a warning to not do that. Instead
# consider adding an alias to `.cargo/config.toml`.
#
# default-members = ["apps/elodin"]
members = [
    "libs/hamann-chen-line",
    "libs/elodin-editor",
    "libs/nox",
    "libs/elodin-macros",
    "libs/nox-py",
    "libs/nox-frames",
    "apps/elodin",
    "fsw/roci",
    "libs/db/macros",
    "fsw/roci/adcs",
    "libs/wmm",
    "libs/bbqueue",
    "libs/s10",
    "libs/impeller2",
    "libs/impeller2/stellar",
    "libs/impeller2/bevy",
    "libs/impeller2/wkt",
    "libs/impeller2/bbq",
    "libs/impeller2/frame",
    "libs/db",
    "libs/db/cli",
    "libs/db/tests",
    "libs/stellarator",
    "libs/stellarator/buf",
    "libs/stellarator/macros",
    "libs/stellarator/maitake",
    "libs/stellarator/maitake/util",
    "libs/video-toolbox",
    "fsw/serial-bridge",
    "fsw/mekf",
    "fsw/lqr",
    "libs/postcard-c/codegen",
    "fsw/aleph-status",
    "fsw/tegrastats-bridge",
    "fsw/aleph-setup",
    "fsw/blackbox",
    "apps/inscriber",
    "fsw/video-streamer",
    "fsw/rtsp-streamer",
    "fsw/gstreamer",
    "fsw/msp-osd",
    "libs/db/eql",
    "libs/impeller2/kdl",
    "libs/db/examples/rust_client",
    "examples/rc-jet/controller",
    "libs/bevy_geo_frames",
    "libs/bevy_mat3_material",
    "libs/bevy_world_mesh",
    "libs/bevy_ai_skybox",
    "libs/cranelift-mlir",
    "libs/monte-carlo",
    "libs/rtsp-ingest",
 ]
exclude = ["fsw/sensor-fw", "fsw/blackbox", "docs/memserve"]

[workspace.package]
version = "0.18.0"
edition = "2024"
repository = "https://github.com/elodin-sys/elodin"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[profile.macos-release]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "debuginfo"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
db-macros.path = "libs/db/macros"
roci.path = "fsw/roci"
roci.default-features = false
roci-adcs.path = "fsw/roci/adcs"
nox.path = "libs/nox"
nox.default-features = false
nox-frames.path = "libs/nox-frames"
wmm.path = "libs/wmm"

[profile.release-with-debug]
inherits = "release"
debug = true

# TODO: switch back to crates.io once bevy_editor_cam ships a Bevy 0.19 release
# (tracking upstream PR https://github.com/aevyrie/bevy_editor_cam/pull/66).
[workspace.dependencies.bevy_editor_cam]
git = "https://github.com/m-edlund/bevy_editor_cam"
rev = "90460341ab6a3b5ff803cbe4f9463655705490ce"
# bevy_editor_cam's bevy-0.19 branch pins bevy_framepace to a personal git
# branch; use the same official tagged source everywhere (see [patch] below)
# so only one FramepacePlugin instance exists. Switch back to crates.io "0.22"
# together with bevy_editor_cam.
[workspace.dependencies.bevy_framepace]
git = "https://github.com/aevyrie/bevy_framepace"
tag = "v0.22.0"
[workspace.dependencies.bevy_math]
version = "0.19"
[workspace.dependencies.bevy]
version = "0.19.0"
default-features = false
features = [
  "std",
  "async_executor",
  "android-game-activity",
  "basis-universal",
  "bevy_animation",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_post_process",
  "bevy_anti_alias",
  "bevy_dev_tools",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_input_focus",
  "bevy_log",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_world_serialization",
  "bevy_image",
  "bevy_mesh",
  "bevy_camera",
  "bevy_light",
  "bevy_shader",
  "bevy_sprite",
  "bevy_sprite_render",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "gltf_animation",
  "hdr",
  "ktx2",
  "mesh_picking",
  "multi_threaded",
  "png",
  "reflect_auto_register",
  "smaa_luts",
  "sprite_picking",
  "sysinfo_plugin",
  "tonemapping_luts",
  "ui_picking",
  "webgl2",
  "x11",
  "debug",
  "zstd_rust",
]

# TODO: switch back to crates.io once big_space 0.13 is released for Bevy 0.19
# (tracking upstream PR https://github.com/aevyrie/big_space/pull/78).
[workspace.dependencies.big_space]
git = "https://github.com/aevyrie/big_space"
rev = "5f255228e9b4ff30756347b80f92b19ebf7b5c56"
features = ["i128"]

[workspace.dependencies.muxide]
version = "0.2.5"

[patch.crates-io]
map_3d = { git = "https://github.com/shanecelis/map_3d.git", branch = "feat/sphere" }
# Local-space FaceCamera/AlongVelocity: full inverse affine for camera
# position in effect space (elodin-sys fork; upstream candidate).
bevy_hanabi = { git = "https://github.com/elodin-sys/bevy_hanabi", rev = "1b46c8cb2bd9655cea25943c51ba0502055ce2ae" }

# bevy_editor_cam's bevy-0.19 branch depends on bevy_framepace from this
# personal git branch; redirect it to the official v0.22.0 tag so the whole
# graph shares a single bevy_framepace instance. Remove together with the
# bevy_editor_cam git pin above.
[patch."https://github.com/hacknus/bevy_framepace.git"]
bevy_framepace = { git = "https://github.com/aevyrie/bevy_framepace", tag = "v0.22.0" }
