[project]
name = "elodin"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["elodin", "matplotlib>=3.9.2", "polars>=1.10.0"]

[tool.ruff]
line-length = 100
extend-exclude = ["vendor", "basilisk", "images/aleph/modules/mk-esp-contents.py"]

[tool.ruff.lint]
extend-select = ["I"]
