[package]
name = "dev-tools"
edition = "2021"
version.workspace = true
repository.workspace = true

[dependencies]
config = "0.14.0"
csv = "1.3.0"
anyhow = "1"
tokio = "1.40.0"

uuid.version = "1.7.0"
uuid.features = ["serde"]

# clap
clap.version = "4.4.18"
clap.features = ["derive"]
clap-markdown = "0.1.4"

# reqwest
reqwest.version = "0.12"
reqwest.features = ["json"]

# serde
serde.version = "1.0"
serde.features = ["derive"]

# sqlx
sqlx.version = "0.6"
sqlx.features = ["runtime-tokio-rustls", "postgres", "uuid"]
