[package]
name = "editor-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paracosm.path = "../../libs/paracosm-core"
paracosm-editor.path = "../../libs/paracosm-editor"
bevy.version = "0.12"
bevy.features = []
postcard.version = "1.0.8"
postcard.features = ["alloc"]
anyhow = "1.0"
js-sys = "0.3"
web-sys.version = "0.3.66"
web-sys.features = [
  "CustomEvent",
  "Window",
  "Document",
  "Element",
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",

]
wasm-bindgen = "0.2.88"
tracing = "0.1"
thingbuf = "0.1.4"
flume = "0.11"
elo-conduit.path = "../../libs/elo-conduit"
wasm-bindgen-futures = "0.4.39"
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1.7"
