[package]
name = "editor-web"
version = "0.1.0"
edition = "2021"
metadata.dist.dist = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elodin-editor.path = "../../libs/elodin-editor"
bevy.version = "0.14"
bevy.features = []
postcard.version = "1.0.8"
postcard.features = ["alloc"]
anyhow = "1.0"
js-sys = "0.3"
web-sys.version = "0.3.66"
web-sys.features = [
    "console",
    "CustomEvent",
    "Window",
    "Document",
    "Element",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",

]
wasm-bindgen = "=0.2.92"
tracing = "0.1"
flume = "0.11"
conduit.path = "../../libs/conduit"
wasm-bindgen-futures = "0.4.39"
console_error_panic_hook = "0.1.7"
bytes.version = "1.5"
tracing-wasm = "0.2.1"
