[package]
name = "editor-web"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elodin-editor.path = "../../libs/elodin-editor"
bevy.version = "0.15"
bevy.features = []
postcard.version = "1.0.8"
postcard.features = ["alloc"]
anyhow = "1.0"
js-sys = "0.3"
web-sys.version = "0.3.66"
web-sys.features = [
    "console",
    "CustomEvent",
    "Window",
    "Document",
    "Element",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",

]
wasm-bindgen = "=0.2.97"
tracing = "0.1"
flume = "0.11"
wasm-bindgen-futures = "0.4.39"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
thingbuf = "0.1.6"
impeller2.path = "../../libs/impeller2"
impeller2-bevy.path = "../../libs/impeller2/bevy"
impeller2-bevy.default-features = false
impeller2-bbq.path = "../../libs/impeller2/bbq"
bbq2.git = "https://github.com/elodin-sys/bbq2.git"
bbq2.rev = "b6e36706a5549d770ebf2dc122b39cef1368b06d"
bbq2.features = ["std", "maitake-sync-0_2"]
bbq2.default-features = false
impeller2-wkt.path = "../../libs/impeller2/wkt"
stellarator-buf.path = "../../libs/stellarator/buf"
fastrand = "2.2"
