[package]
name = "elodin"
version.workspace = true
repository.workspace = true
edition = "2021"

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.7"
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
opener = "0.6.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json", "stream"] }

# serialization
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
postcard = "1"

tar = "0.4.40"
tempfile = "3.10.0"
tokio = { version = "1.35.1", features = ["full"] }
tonic = { version = "0.12", features = ["tls", "tls-webpki-roots"] }
uuid = "1.7.0"
directories = "5.0.1"
zstd = "0.13.0"
bevy.version = "0.14"
flume = "0.11.0"
tracing-subscriber = "0.3"
copy_dir = "0.1.3"

elodin-types.path = "../../libs/elodin-types/rust"
elodin-editor.path = "../../libs/elodin-editor"
elodin-editor.default-features = false
conduit.path = "../../libs/conduit"
conduit.features = ["tokio", "polars"]

# crypto
ring = "0.17"

# machine id
machine-uid = "0.5.1"
