[project]
name = "drone"
version = "0.1.0"
description = "Quadcopter / Quadplane Simulation"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "elodin>=0.9.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "polars>=1.10.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
