[package]
name = "msg-test"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1"

# async
stellarator.path = "../../libs/stellarator"
stellarator.features = ["miette"]
impeller2-stellar.path = "../../libs/impeller2/stellar"

# ser-de
impeller2.path = "../../libs/impeller2"
impeller2.features = ["std"]
impeller2-wkt.path = "../../libs/impeller2/wkt"
zerocopy.version = "0.8.2"
roci.path = "../../libs/roci"
serde.version = "1.0"
serde.features = ["derive"]
postcard-schema.version = "0.2"
postcard-schema.features = ["derive"]

# rand
fastrand = "2.2.0"
