[package]
name = "aleph-setup"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
zbus.version = "5.5.0"
zbus.default-features = false
zbus.features = ["tokio"]
promkit.version = "0.9.1"
promkit.features = ["query-selector", "password", "confirm", "readline", "listbox"]
tokio = { version = "1", features = ["full"] }
fuzzy-matcher = "0.3.7"
fastrand = "1.1.0"
nu-ansi-term = "0.49"
reqwest.version = "0.11"
reqwest.default-features = false
reqwest.features = ["rustls-tls"]
