[package]
name = "aleph-file-bridge"
edition = "2021"
version.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1"

serialport.version = "4.6.1"
serialport.default-features = false

# ser-de
cobs = "0.2"
zerocopy.version = "0.8.2"
zerocopy.features = ["derive"]

libc = "0.2"
