[package]
name = "roci-multicopter"
edition = "2021"
version = "0.1.0"
publish = false

[lib]
harness = false

[[test]]
name = "integration"
harness = false

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0", features=["defmt-03"] }
critical-section = "1.1"
cortex-m-semihosting = "0.5"
embedded-hal-compat = "0.13.0"

hal = { package = "stm32-hal2", version = "1.8", features = ["h747cm7", "h7rt"]}
fugit = { version = "0.3.7", features = ["defmt"] }

paste = "1.0"
dshot-frame = "0.1.3"

nox = { path = "../../libs/nox", default-features = false }

[dev-dependencies]
defmt-test = "0.3"

[patch.crates-io]
# Remove after https://github.com/dtolnay/thiserror/pull/304 is merged
thiserror = { git = "https://github.com/quartiq/thiserror.git", rev = "e779e1b" }
# Remove after https://github.com/NotIntMan/inplace_it/pull/16 is merged
inplace_it = { git = "https://github.com/akhilles/inplace_it.git", rev = "61077d3" }
# Remove after there's a new release on https://crates.io/crates/faer > 0.19.4
faer = { git = "https://github.com/sarah-quinones/faer-rs.git", rev = "4f3eb7e" }
