[package]
name = "roci-multicopter"
edition = "2021"
version = "0.1.0"
publish = false

[[bin]]
name = "fw"
test = false
bench = false

[[bin]]
name = "magcal"
test = false
bench = false

[lib]
harness = false

[[test]]
name = "integration"
harness = false

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0", features = ["defmt-03"] }
embedded-io = { version = "0.6", features = ["defmt-03"] }
embedded-hal-compat = "0.13.0"
embedded-alloc = { version = "0.6", default-features = false, features = [
    "tlsf",
] }
critical-section = "1.1"
cortex-m-semihosting = "0.5"
fdcan = { version = "0.2.1", features = ["fdcan_h7", "embedded-can-03"] }
heapless = { version = "0.8", features = ["defmt-03"] }
crc = "3.2"
fatfs = { version = "0.4", default-features = false, features = ["log_level_info"] }
hal = { package = "stm32-hal2", version = "1.8", features = ["h747cm7", "embedded_hal"] }
fugit = { version = "0.3.7", features = ["defmt"] }
sdio-host = "0.9"
paste = "1.0"
dshot-frame = "0.1.3"
bitfield-struct = "0.9"
modular-bitfield = "0.11"
nox = { path = "../../libs/nox", default-features = false }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }

[dev-dependencies]
defmt-test = "0.3"

[patch.crates-io]
# Remove after https://github.com/David-OConnor/stm32-hal/pull/111 is merged
# and there's a new release on https://crates.io/crates/stm32-hal2 > 1.8.5
hal = { package = "stm32-hal2", git = "https://github.com/akhilles/stm32-hal.git", rev = "4ea09cc" }

# Remove after there's a new release on https://crates.io/crates/fatfs >= 0.4.0
fatfs = { git = "https://github.com/rafalh/rust-fatfs.git", rev = "c4bb769" }
