[package]
name = "roci"
license = "MIT OR Apache-2.0"
version.workspace = true
edition = "2024"
description = "Elodin flight software framework."
repository = "https://github.com/elodin-sys/elodin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["csv", "std", "stellar"]
std = []
csv = ["dep:csv", "serde"]
stellar = ["dep:stellarator", "impeller2-stellar", "impeller2/thingbuf", "fastrand", "bbqueue", "impeller2-bbq"]

[dependencies]
impeller2.path = "../../libs/impeller2"
impeller2.features = ["std"]
impeller2-wkt.path = "../../libs/impeller2/wkt"

# data structures
heapless = "0.8"
thingbuf = "0.1.6"
zerocopy.version = "0.8.2"
zerocopy.features = ["derive"]

# async
stellarator.path = "../../libs/stellarator"
stellarator.optional = true
impeller2-stellar.path = "../../libs/impeller2/stellar"
impeller2-stellar.features = ["queue"]
impeller2-stellar.optional = true
impeller2-bbq.path = "../../libs/impeller2/bbq"
impeller2-bbq.optional = true
fastrand.version = "2.2.0"
fastrand.optional = true
bbqueue.git = "https://github.com/elodin-sys/bbqueue.git"
bbqueue.rev = "9d11b52fb944f1bd67c80f3f38af1376ebb7efe3"
bbqueue.features = ["std", "maitake-sync-0_3"]
bbqueue.default-features = false
bbqueue.optional = true


# logs
tracing = "0.1.40"
tracing-subscriber = "0.3"

# math
nox.workspace = true
nox.default-features = false

# macros
db-macros.workspace = true

# os bindings
nix.version = "0.29.0"
nix.features = ["time", "signal"]

# csv
csv.version = "1.3.0"
csv.optional = true
serde.version = "1.0"
serde.features = ["derive"]
serde.optional = true

# serde
postcard.version = "1.1"
postcard-schema.version = "0.2"
postcard-schema.features = ["use-std"]

[dev-dependencies]
anyhow = "1.0"
db-macros.workspace = true
