[package]
name = "aleph-serial-bridge"
license = "MIT OR Apache-2.0"
edition = "2024"
version.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1"

# async
stellarator.path = "../../libs/stellarator"
stellarator.features = ["miette"]
impeller2-stellar.path = "../../libs/impeller2/stellar"
futures-lite = "2.5.0"

# ser-de
impeller2.path = "../../libs/impeller2"
impeller2.features = ["std"]
impeller2-wkt.path = "../../libs/impeller2/wkt"
impeller2-wkt.features = ["std"]
impeller2-frame.path = "../../libs/impeller2/frame"
cobs = "0.2"
zerocopy.version = "0.8.2"
roci.path = "../../libs/roci"
serde.version = "1.0"
serde.features = ["derive"]
postcard-schema.version = "0.2"
postcard-schema.features = ["derive"]
blackbox.path = "../../fsw/blackbox"
blackbox.features = ["roci"]

# rand
fastrand = "2.2.0"
