[package]
name = "video-streamer"
version = "0.1.0"
edition = "2021"
description = "Streams video files to elodin-db after re-encoding to AV1"

[dependencies]
ffmpeg-next = "7.1.0"
impeller2 = { path = "../../libs/impeller2" }
impeller2-stellar = { path = "../../libs/impeller2/stellar" }
impeller2-wkt = { path = "../../libs/impeller2/wkt" }
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
miette = { version = "5.10", features = ["fancy"] }
anyhow = "1.0"
postcard = "1.0"
stellarator.path = "../../libs/stellarator"
byteorder = "1.5"
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "video-streamer"
path = "src/main.rs"
