[package]
name = "basilisk-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# queue
spin = { version = "0.9.8", default-features = false, features = ["use_ticket_mutex"] }

# logs
tracing = "0.1.40"

# macros
paste = "1.0.14"

[build-dependencies]
bindgen = "0.65.1"
cc = "1.0.97"


[dev-dependencies]
approx = "0.5.1"
