[package]
name = "basilisk"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serde = ["dep:serde"]

[dependencies]
# queue
spin = { version = "0.9.8", default-features = false, features = ["use_ticket_mutex"] }

# logs
tracing = "0.1.40"

# macros
paste = "1.0.14"

# serde
serde.version = "1.0"
serde.optional = true
serde.features = ["derive"]

[build-dependencies]
bindgen = "0.70.1"
cc = "1.0.97"


[dev-dependencies]
approx = "0.5.1"
roci.path = "../roci"
roci.features = ["tokio"]
roci-macros.path = "../roci/macros"
tracing-subscriber = "0.3"
nox.path = "../nox"
impeller.path = "../impeller"
impeller.features = ["nox"]
